--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     }
     #text3d2
     {
-        color: #b1b419;
+        color: #7E354D;
     letter-spacing: .15em;
     text-shadow: 
       -1px -1px 1px #efede3, 
